roles/tpa_single_node/templates/services/guac/collectsub/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guac-collectsub
  labels:
    app.kubernetes.io/name: guac-collectsub
    app.kubernetes.io/component: guac
    app.kubernetes.io/instance: redhat-trusted-profile-analyzer
    app.kubernetes.io/version: 1.1.1
    app.kubernetes.io/part-of: trusted-profile-analyzer
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: guac-collectsub-tls
spec:
  ports:
    - name: endpoint
      port: 2782
      protocol: TCP
      targetPort: endpoint
  selector:
    app.kubernetes.io/name: guac-collectsub
    app.kubernetes.io/component: guac
    app.kubernetes.io/instance: redhat-trusted-profile-analyzer
  type: ClusterIP
