roles/tpa_single_node/templates/services/guac/collectsub/050-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guac-collectsub
  labels:
    app.kubernetes.io/name: guac-collectsub
    app.kubernetes.io/component: guac
    app.kubernetes.io/instance: redhat-trusted-profile-analyzer
    app.kubernetes.io/version: 1.1.1
    app.kubernetes.io/part-of: trusted-profile-analyzer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: guac-collectsub
      app.kubernetes.io/component: guac
      app.kubernetes.io/instance: redhat-trusted-profile-analyzer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: trustification
      ports:
        - protocol: TCP
          port: 2782
